# jade

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yaml
litellm/: Dockerfile  config.yaml
open_webui/: Dockerfile
open_webui/functions/: pipe_anthropic_bedrock.py
